--- a/app/src/main/res/layout/custom_notification_layout.xml
+++ b/app/src/main/res/layout/custom_notification_layout.xml
@@ -10,13 +10,13 @@
     <RelativeLayout
         android:layout_width="45dp"
         android:layout_height="45dp">
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/image_profile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/notification_icon">
 
-        </de.hdodenhof.circleimageview.CircleImageView>
+        </ImageView>
 
     </RelativeLayout>
 
@@ -152,6 +152,7 @@
         android:orientation="vertical">
 
        <ImageView
+           android:id="@+id/removeNoti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_cancel_24"
