--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,14 @@
         <LinearLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/toolBarProfilePic"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="10dp"
                 android:src="@drawable/profile">
@@ -49,18 +49,19 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@+id/appBarLayout"
             android:elevation="0dp"
             app:elevation="0dp"
             app:tabGravity="fill"
             app:tabIndicator="@color/icons"
+            android:background="@color/colorPrimary"
             app:tabIndicatorAnimationMode="linear"
-            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabIndicatorColor="@color/icons"
             app:tabIndicatorHeight="3dp"
             app:tabMode="scrollable"
-            app:tabSelectedTextColor="@color/colorPrimary"
-            app:tabTextColor="@color/primaryTextColor">
+            app:tabSelectedTextColor="@color/icons"
+            app:tabTextColor="#89C8E8">
 
         </com.google.android.material.tabs.TabLayout>
         <androidx.viewpager.widget.ViewPager
